[package]
name = "bottle"
version = "0.1.0"
authors = ["Timothée Haudebourg <timothee.haudebourg@irisa.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "*"
crossbeam-queue = "*"
parking_lot = "*"
static_assertions = "1.1.0"

[dev-dependencies]
async-std = { version = "*", features = ["attributes"] }
