[package]
name = "bottle"
version = "1.0.0"
repository = "https://github.com/timothee-haudebourg/bottle"
authors = ["Timothée Haudebourg <author@haudebourg.net>"]
license = "MIT/Apache-2.0"
categories = ["asynchronous"]
keywords = ["concurrent", "thread", "async", "actor", "signals"]
description = "Actor model framework for Rust."
edition = "2018"

[dependencies]
futures = "0.3"
crossbeam-queue = "0.2"
parking_lot = "0.10"
static_assertions = "1.1"

[dev-dependencies]
async-std = { version = "1.5", features = ["attributes"] }
